# jackson-cli

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: api-release.yml  cli-release.yml
apps/api/: package.json  pyproject.toml
apps/api/app/: models.py
apps/api/app/db/: schema.py
apps/api/app/repositories/: mongodb.py
apps/api/app/services/: tokens.py
apps/api/scripts/: smoke.py
apps/api/tests/: test_api.py
apps/docs/: package.json
apps/docs/app/: layout.tsx  page.tsx  styles.css
apps/docs/scripts/: check-docs.mjs
scripts/: smoke.sh
skills/ask-jackson/: SKILL.md
