[project]
name = "jackson-api"
version = "0.1.1"
description = "Private FastAPI backend for jackson CLI"
requires-python = ">=3.11"
dependencies = [
  "fastapi[standard]>=0.115.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.6.0",
  "pymongo>=4.17.0",
  "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0"
]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
